--- a/app/components/chart.hbs
+++ b/app/components/chart.hbs
@@ -1,3 +1,4 @@
+{{! template-lint-disable no-at-ember-render-modifiers }}
 <div class="lttf-chart" data-test-chart={{@rule}}>
   <div class="flex">
     <h2>{{this.ruleName}}</h2>
