--- a/app/templates/rule.hbs
+++ b/app/templates/rule.hbs
@@ -1,6 +1,11 @@
 {{page-title "Rule"}}
 
-<Chart @rule={{@model.rule}} @data={{@model.ruleData}} @highestDate={{@model.highestDate}} @showLink={{false}} />
+<Chart
+  @rule={{@model.rule}}
+  @data={{@model.ruleData}}
+  @highestDate={{@model.highestDate}}
+  @showLink={{false}}
+/>
 
 <h2>Files with {{@model.ruleName}} </h2>
 <ul>
