--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2,13 +2,13 @@
 /* stylelint-disable declaration-block-no-redundant-longhand-properties */
 
 :root {
-  --light-link-color: #5C8001;
+  --light-link-color: #5c8001;
   --chart-border-radius: 8px;
 }
 
 body {
-  background-color: #EDF7D2;
-  font-family: 'Source Sans Pro', sans-serif;
+  background-color: #edf7d2;
+  font-family: "Source Sans Pro", sans-serif;
   margin: 20px;
 }
 
@@ -77,7 +77,7 @@ a {
   border: 1px solid #28608f;
   margin-right: -1px;
   color: #fff;
-  background-color: #0F3460;
+  background-color: #0f3460;
 }
 .stv-radio-button + label:first-of-type {
   border-radius: 0.7em 0 0 0.7em;
@@ -106,24 +106,25 @@ details > .graphs {
 
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: #1A1A2E;
+    background-color: #1a1a2e;
     color: white;
   }
 
   .plain-link {
-    color: white
+    color: white;
   }
 
   details {
-    border-color: #0F3460;
+    border-color: #0f3460;
   }
 
   a {
-    color: #FBBF24;
+    color: #fbbf24;
   }
 
-  .lttf-chart, .stat-card {
-    background-color: #16213E;
+  .lttf-chart,
+  .stat-card {
+    background-color: #16213e;
   }
 
   .chart-container .axis {
@@ -131,7 +132,7 @@ details > .graphs {
   }
 
   .modal-content {
-    background-color: #16213E;
+    background-color: #16213e;
   }
   svg.close path {
     fill: white;
@@ -153,8 +154,8 @@ footer {
 
 /* helper classes */
 .my-2 {
-  margin-top: .5em;
-  margin-bottom: .5em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 .px-2 {
